# ClawCore

./: .env.example  .gitignore  README.md  RESUME.md  pyproject.toml  report_output.md  requirements.txt  sample_notes.txt
config/: __init__.py  settings.py
data/traces/: trace-s-20260705-164326-eb8c.html  trace-s-20260705-164326-eb8c.jsonl  trace-s-20260705-164347-c717.html  trace-s-20260705-164347-c717.jsonl
src/: __init__.py  cli.py
src/agent_loop/: react_loop.py
src/context/: __init__.py  auto_threshold.py  budget_truncator.py  context_pipeline.py  redundancy_pruner.py  structural_compressor.py
src/llm/: __init__.py
src/memory/: __init__.py  long_term_memory.py  memory_consolidator.py  memory_manager.py  session_memory.py  working_memory.py
src/skills/: __init__.py  skill_extractor.py  skill_manager.py  skill_validator.py  skill_versioning.py
src/tools/: __init__.py  calculator.py  file_ops.py  finish.py  memory_tools.py  skill_invoke.py  task_manager.py  web_fetch.py  web_search.py
tests/: benchmark.py  conftest.py  test_compression_pipeline.py  test_context.py  test_l3.py  test_session_memory.py  test_skills.py  test_tools.py
