[project]
name = "myclaw"
version = "0.1.0"
description = "基于多层记忆与 Skill 自进化的通用 Agent 助手"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "psycopg2-binary>=2.9.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
myclaw = "src.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "config"]
